[gd_scene load_steps=5 format=3 uid="uid://deuew24su3ga3"]

[ext_resource type="Texture2D" uid="uid://dcynep724f3qb" path="res://Assets/Sprites/Goose_idle.png.png" id="1_cggtt"]
[ext_resource type="Script" path="res://Assets/NPCs/goose.gd" id="1_w0rmw"]
[ext_resource type="PackedScene" uid="uid://b780hw38aude7" path="res://DialogBox.tscn" id="3_xqh8e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s7wvn"]
size = Vector2(30, 31)

[node name="Goose" type="Node2D"]
script = ExtResource("1_w0rmw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_cggtt")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(1, 0.5)
shape = SubResource("RectangleShape2D_s7wvn")

[node name="Dialog" parent="." instance=ExtResource("3_xqh8e")]
visible = false

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="option_selected" from="Dialog" to="." method="_on_dialog_option_selected"]
